# seams-app

./: .dockerignore  .gitignore  Dockerfile.seams  LICENSE  README.md  docker-compose.yml  installation_notes.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
seams_app/: __init__.py  app.py  app_services.yaml  custom_options.py  data_models.py  datastore_utils.py  markers.py  seafloor.py  seams_media.py  seams_utils.py  version.py
seams_app/components/frame_zoom/: __init__.py
seams_app/components/frame_zoom/frontend/: index.html
seams_app/components/image_coordinates/: __init__.py
seams_app/components/image_coordinates/frontend/: index.html  main.js  streamlit-component-lib.js  style.css
seams_app/components/zoom_select_image_component/: __init__.py  example.py
seams_app/components/zoom_select_image_component/frontend/src/: ZoomSelectImageComponent.tsx  index.tsx
seams_app/components/zoom_select_image_component/frontend/src/components/: ZoomRectangleManager.tsx
seams_app/config/: affiliations.toml  dtypes.toml  logos.toml  station_core_columns_dtypes.yaml  station_measurement_columns_dtypes.yaml  video_core_columns_dtypes.yaml
seams_app/services/: benthos_interpretation.py  seafloor_interpretation.py  stations_init.py  survey_init.py  survey_management.py  troubleshooting.py
