# poetry update
# poetry export --without-hashes --format=requirements.txt > requirements.txt 
# twine upload -r pypi dist/*

[tool.poetry]
name = "seams-app"
version = "2.2.0"
description = "Sveriges Geologiska Undersökning (SGU) - SEafloor Annotation and Mapping Support"
authors = ["Be GeoSpatial AB <develop@begeospatial.com>"]
readme = "README.md"
packages = [{include = "seams_app"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.23.1"
opencv-python = "^4.7.0.72"
pyyaml = "^6.0"
ffmpeg-python = "^0.2.0"
st-files-connection = {git = "https://github.com/streamlit/files-connection", rev = "main"}
matplotlib = "^3.7.1"
chardet = "^5.1.0"
fsspec = "^2023.6.0"
shapely = "^2.0.1"
bgstools = "^0.2.1"
bgsio = "^0.1.4"
zoom-select-image-component = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
